--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -60,13 +60,20 @@ body {
 .section {
   padding: 0;
   position: relative;
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
+  height: 90vh;
   padding-top: 0.5rem;
   padding: 1rem;
 }
+@media screen and (min-width: 720px) {
+  .section {
+    height: 100vh;
+  }
+}
+.section.screen__start .content__container-flex {
+  margin-top: 3rem;
+}
 .button-start__container {
-  width: 80%;
+  width: 95%;
 }
 .button-start__container .button-start {
   width: 100%;
@@ -95,8 +102,8 @@ body {
   border-radius: 50%;
   font-size: 1.5rem;
   padding: 0.75rem;
-  border-color: #a6a6a6;
-  z-index: 2;
+  border-color: #5271ff;
+  z-index: 1;
 }
 
 #nextstep,
@@ -193,8 +200,26 @@ a.button {
   right: 15px;
   width: 50px;
   height: 50px;
-  border-color: #a6a6a6;
+  border-color: #5271ff;
   z-index: 2;
+}
+
+.button-undo,
+.button-clear,
+.button-skip {
+  margin-bottom: 0;
+}
+
+.button.hollow.secondary {
+  border: 2px solid #a6a6a6;
+  color: #a6a6a6;
+  font-weight: bold;
+}
+
+.button.hollow.secondary:focus,
+.button.hollow.secondary:hover {
+  border-color: #5271ff;
+  color: #5271ff;
 }
 
 .logo--start {
@@ -217,10 +242,9 @@ a.button {
   width: 100%;
 }
 .bars__container .bar__empty {
-  height: 25px;
+  height: 22px;
   width: 100%;
-  margin: 0 auto 10px auto;
-  line-height: 30px;
+  margin: 0 auto 3px auto;
   font-size: 16px;
   font-weight: bold;
   text-shadow: 1px 1px 1px black, 1px -1px 1px black, -1px 1px 1px black, -1px -1px 1px black;
@@ -238,10 +262,16 @@ a.button {
 .canvas__container {
   width: 100%;
   max-height: 60%;
+  text-align: center;
 }
 .canvas__container .canvas {
   width: 100%;
   height: 95%;
+  border: 3px solid #5271ff;
+}
+
+.endscreencanvas {
+  width: 50%;
   border: 3px solid #5271ff;
 }
 
@@ -267,6 +297,7 @@ a.button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .timer__container {
@@ -287,6 +318,7 @@ a.button {
   position: fixed;
   display: none;
   width: 100%;
+  max-width: 100%;
   height: 100%;
   top: 0;
   left: 0;
@@ -294,7 +326,6 @@ a.button {
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 2;
-  cursor: pointer;
 }
 
 #overlay-text {
